update solution colours

--- a/views/index.html
+++ b/views/index.html
@@ -56,19 +56,19 @@
         }
 
         #grid > section.solution1 {
-            background-color: yellow;
+            background-color: #f9df6d;
         }
 
         #grid > section.solution2 {
-            background-color: purple;
+            background-color: #a0c35a;
         }
 
         #grid > section.solution3 {
-            background-color: green;
+            background-color: #b0c4ef;
         }
 
         #grid > section.solution4 {
-            background-color: lightblue;
+            background-color: #ba81c5;
         }
 
         #grid div.highlighted {
